syntax = "proto3";

option csharp_namespace = "Altkom.Orange.GrpcService.Protos";

package customers;

service CustomerService { 
	rpc AddCustomer (AddCustomerRequest) returns (AddCustomerResponse);
	rpc YouHaveGotNewCustomer (YouHaveGotNewCustomerRequest) returns (stream YouHaveGotNewCustomerResponse);
}

message AddCustomerRequest {
    string first_name = 1;
	string last_name = 2;
	string email = 3;
	bool is_removed = 4;
}


message AddCustomerResponse {
	bool is_confirmed = 1;
	int32 id = 2;
}

message YouHaveGotNewCustomerRequest {
	string groupName = 1;
}

message YouHaveGotNewCustomerResponse {
	string first_name = 1;
	string last_name = 2;
	string email = 3;
}